# kanirenderer

./: .gitignore  Cargo.toml  README.md  kanirenderer_viewer.h  template.toml
kani-go/: go.mod  main.go
res/: cube.mtl  sponza.mtl
src/: camera.rs  debug_depth.wgsl  deferredRenderPipeline.rs  entity.rs  frametime.rs  frametime.wgsl  lib.rs  light.rs  light.wgsl  lit_shader.wgsl  main.rs  model.rs  resources.rs  shader.wgsl  shader_hdr.wgsl  shader_wireframe.wgsl  shadow.wgsl  texture.rs  unlit_shader.wgsl
